@@ -35,6 +35,11 @@
     // the delegate receives decode results
     readerView.readerDelegate = self;
 
+    // ensure initial camera orientation is correctly set
+    UIApplication *app = [UIApplication sharedApplication];
+    [readerView willRotateToInterfaceOrientation: app.statusBarOrientation
+                                        duration: 0];
+
     // you can use this to support the simulator
     if(TARGET_IPHONE_SIMULATOR) {
         cameraSim = [[ZBarCameraSimulator alloc]
